[package]
name = "rvn"
version = "0.2.0"
authors = ["Sebastian Mandrean <sebastian.mandrean@gmail.com>"]
edition = "2018"
description = "A CLI tool for interacting with Maven repositories & artifacts"
license = "MIT"
repository = "https://github.com/mandrean/raven"
documentation = "https://docs.rs/rvn"
readme = "README.md"
keywords = ["maven", "mvn", "cli", "java", "pom"]

[dependencies]
clap = "2.33.0"
log = "0.4"
regex = "1"
reqwest = "0.9.20"
strum = { git = "https://github.com/Peternator7/strum", rev = "efed58502a40ac101691068bbc6c20a0b351f3fd" }
strum_macros = { git = "https://github.com/Peternator7/strum", rev = "efed58502a40ac101691068bbc6c20a0b351f3fd" }
url = "2.1.0"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
